task1/test_results_defects/infer_test/overrun_st/report.txt
#0
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/overrun_st.c:21: error: Buffer Overrun L1
  Offset: 5 Size: 5.
  19. {
  20. 	char buf[5];
  21. 	buf[5] = 1; /*Tool should detect this line as error*/ /*ERROR: buffer overrun */
       ^
  22.         sink = buf[idx];
  23. }

#1
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/overrun_st.c:32: error: Buffer Overrun L1
  Offset: 5 Size: 5.
  30. {
  31. 	short buf[5];
  32. 	buf[5] = 1;/*Tool should detect this line as error*/ /*ERROR: buffer overrun */
       ^
  33.         sink = buf[idx];
  34. }

#2
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/overrun_st.c:44: error: Buffer Overrun L1
  Offset: 5 Size: 5.
  42. 	int buf[5] = {1, 2, 3, 4, 5};
  43. 	int ret;
  44. 	ret = buf[5];/*Tool should detect this line as error*/ /*ERROR: buffer overrun */
             ^
  45.         sink = buf[idx];
  46. }

#3
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/overrun_st.c:44: error: Dead Store
  The value written to &ret (type int) is never used.
  42. 	int buf[5] = {1, 2, 3, 4, 5};
  43. 	int ret;
  44. 	ret = buf[5];/*Tool should detect this line as error*/ /*ERROR: buffer overrun */
       ^
  45.         sink = buf[idx];
  46. }

#4
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/overrun_st.c:55: error: Buffer Overrun L1
  Offset: 5 Size: 5.
  53. {
  54. 	int buf[5];
  55. 	buf[5] = 1;/*Tool should detect this line as error*/ /*ERROR: buffer overrun */
       ^
  56.         sink = buf[idx];
  57. }

#5
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/overrun_st.c:66: error: Buffer Overrun L1
  Offset: 5 Size: 5.
  64. {
  65. 	long buf[5];
  66. 	buf[5] = 1;/*Tool should detect this line as error*/ /*ERROR: buffer overrun */
       ^
  67.         sink = buf[idx];
  68. }

#6
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/overrun_st.c:77: error: Buffer Overrun L1
  Offset: 5 Size: 5.
  75. {
  76. 	float buf[5];
  77. 	buf[5] = 1.0;/*Tool should detect this line as error*/ /*ERROR: buffer overrun */
       ^
  78.         sink = buf[idx];
  79. }

#7
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/overrun_st.c:88: error: Buffer Overrun L1
  Offset: 5 Size: 5.
  86. {
  87. 	double buf[5];
  88. 	buf[5] = 1.0;/*Tool should detect this line as error*/ /*ERROR: buffer overrun */
       ^
  89.         sink = buf[idx];
  90. }

#8
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/overrun_st.c:99: error: Buffer Overrun L1
  Offset: 5 Size: 5.
   97. {
   98. 	int buf[5][6];
   99. 	buf[5][5] = 1;/*Tool should detect this line as error*/ /*ERROR: buffer overrun */
        ^
  100.         sink = buf[idx][idx];
  101. }

#9
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/overrun_st.c:110: error: Buffer Overrun L1
  Offset: 5 Size: 5.
  108. {
  109. 	int buf[5][6][7];
  110. 	buf[5][5][6] = 1;/*Tool should detect this line as error*/ /*ERROR: buffer overrun */
        ^
  111.         sink = buf[idx][idx][idx];
  112. }

#10
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/overrun_st.c:126: error: Buffer Overrun L1
  Offset: 5 Size: 5.
  124. 	int buf5[5];
  125. 	int *pbuf[5] = {buf1, buf2, buf3, buf4, buf5};
  126. 	pbuf[4][5] = 1;/*Tool should detect this line as error*/ /*ERROR: buffer overrun */
        ^
  127. }
  128. 

#11
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/overrun_st.c:142: error: Buffer Overrun L1
  Offset: 5 Size: 5.
  140. {
  141. 	overrun_st_011_s_001 sbuf[5];
  142. 	sbuf[5].a = 1;/*Tool should detect this line as error*/ /*ERROR: buffer overrun */
        ^
  143. }
  144. 

#12
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/overrun_st.c:169: error: Buffer Overrun L1
  Offset: 5 Size: 5.
  167. 	int buf[5];
  168. 	int index = 5;
  169. 	buf[index] = 1;/*Tool should detect this line as error*/ /*ERROR: buffer overrun */
        ^
  170.         sink = buf[idx];
  171. }

#13
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/overrun_st.c:194: error: Buffer Overrun L1
  Offset: 5 Size: 5.
  192. 	int buf[5];
  193. 	int index = 2;
  194. 	buf[(2 * index) + 1] = 1;/*Tool should detect this line as error*/ /*ERROR: buffer overrun */
        ^
  195.         sink = buf[idx];
  196. }

#14
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/overrun_st.c:206: error: Buffer Overrun L1
  Offset: 5 Size: 5.
  204. 	int buf[5];
  205. 	int index = 2;
  206. 	buf[(index * index) + 1] = 1;/*Tool should detect this line as error*/ /*ERROR: buffer overrun */
        ^
  207.         sink = buf[idx];
  208. }

#15
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/overrun_st.c:222: error: Buffer Overrun L1
  Offset: 5 Size: 5.
  220. {
  221. 	int buf[5];
  222. 	buf[overrun_st_017_func_001()] = 1;/*Tool should detect this line as error*/ /*ERROR: buffer overrun */
        ^
  223.         sink = buf[idx];
  224. }

#16
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/overrun_st.c:250: error: Buffer Overrun L2
  Offset: [3, 6] Size: 5.
  248. 	int indexes[4] = {3, 4, 5, 6};
  249. 	int index = 2;
  250. 	buf[indexes[index]] = 1;/*Tool should detect this line as error*/ /*ERROR: buffer overrun */
        ^
  251.         sink = buf[idx];
  252. }

#17
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/overrun_st.c:264: error: Buffer Overrun L1
  Offset: 5 Size: 5.
  262. 	int index1;
  263. 	index1 = index;
  264. 	buf[index1] = 1;/*Tool should detect this line as error*/ /*ERROR: buffer overrun */
        ^
  265.         sink = buf[idx];
  266. }

#18
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/overrun_st.c:280: error: Buffer Overrun L1
  Offset: 5 Size: 5.
  278. 	index1 = index;
  279. 	index2 = index1;
  280. 	buf[index2] = 1;/*Tool should detect this line as error*/ /*ERROR: buffer overrun */
        ^
  281.         sink = buf[idx];
  282. }

#19
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/overrun_st.c:293: error: Buffer Overrun L1
  Offset: 5 Size: 5.
  291. 	char *p;
  292. 	p = buf;
  293. 	*(p + 5) = 1;/*Tool should detect this line as error*/ /*ERROR: buffer overrun */
        ^
  294.         sink = buf[idx];
  295. }

#20
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/overrun_st.c:294: error: Uninitialized Value
  The value read from buf[_] was never initialized.
  292. 	p = buf;
  293. 	*(p + 5) = 1;/*Tool should detect this line as error*/ /*ERROR: buffer overrun */
  294.         sink = buf[idx];
               ^
  295. }
  296. 

#21
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/overrun_st.c:306: error: Buffer Overrun L1
  Offset: 5 Size: 5.
  304. 	short *p;
  305. 	p = buf;
  306. 	*(p + 5) = 1;/*Tool should detect this line as error*/ /*ERROR: buffer overrun */
        ^
  307.         sink = buf[idx];
  308. }

#22
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/overrun_st.c:307: error: Uninitialized Value
  The value read from buf[_] was never initialized.
  305. 	p = buf;
  306. 	*(p + 5) = 1;/*Tool should detect this line as error*/ /*ERROR: buffer overrun */
  307.         sink = buf[idx];
               ^
  308. }
  309. 

#23
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/overrun_st.c:320: error: Buffer Overrun L1
  Offset: 5 Size: 5.
  318. 	int ret;
  319. 	p = buf;
  320. 	ret = *(p + 5);/*Tool should detect this line as error*/ /*ERROR: buffer overrun */
              ^
  321.         sink = buf[idx];
  322. }

#24
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/overrun_st.c:320: error: Dead Store
  The value written to &ret (type int) is never used.
  318. 	int ret;
  319. 	p = buf;
  320. 	ret = *(p + 5);/*Tool should detect this line as error*/ /*ERROR: buffer overrun */
        ^
  321.         sink = buf[idx];
  322. }

#25
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/overrun_st.c:333: error: Buffer Overrun L1
  Offset: 5 Size: 5.
  331. 	int *p;
  332. 	p = buf;
  333. 	*(p + 5) = 1;/*Tool should detect this line as error*/ /*ERROR: buffer overrun */
        ^
  334.         sink = buf[idx];
  335. }

#26
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/overrun_st.c:334: error: Uninitialized Value
  The value read from buf[_] was never initialized.
  332. 	p = buf;
  333. 	*(p + 5) = 1;/*Tool should detect this line as error*/ /*ERROR: buffer overrun */
  334.         sink = buf[idx];
               ^
  335. }
  336. 

#27
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/overrun_st.c:346: error: Buffer Overrun L1
  Offset: 5 Size: 5.
  344. 	long *p;
  345. 	p = buf;
  346. 	*(p + 5) = 1;/*Tool should detect this line as error*/ /*ERROR: buffer overrun */
        ^
  347.         sink = buf[idx];
  348. }

#28
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/overrun_st.c:347: error: Uninitialized Value
  The value read from buf[_] was never initialized.
  345. 	p = buf;
  346. 	*(p + 5) = 1;/*Tool should detect this line as error*/ /*ERROR: buffer overrun */
  347.         sink = buf[idx];
               ^
  348. }
  349. 

#29
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/overrun_st.c:359: error: Buffer Overrun L1
  Offset: 5 Size: 5.
  357. 	float *p;
  358. 	p = buf;
  359. 	*(p + 5) = 1;/*Tool should detect this line as error*/ /*ERROR: buffer overrun */
        ^
  360.         sink = buf[idx];
  361. }

#30
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/overrun_st.c:360: error: Uninitialized Value
  The value read from buf[_] was never initialized.
  358. 	p = buf;
  359. 	*(p + 5) = 1;/*Tool should detect this line as error*/ /*ERROR: buffer overrun */
  360.         sink = buf[idx];
               ^
  361. }
  362. 

#31
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/overrun_st.c:372: error: Buffer Overrun L1
  Offset: 5 Size: 5.
  370. 	double *p;
  371. 	p = buf;
  372. 	*(p + 5) = 1;/*Tool should detect this line as error*/ /*ERROR: buffer overrun */
        ^
  373.         sink = buf[idx];
  374. }

#32
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/overrun_st.c:373: error: Uninitialized Value
  The value read from buf[_] was never initialized.
  371. 	p = buf;
  372. 	*(p + 5) = 1;/*Tool should detect this line as error*/ /*ERROR: buffer overrun */
  373.         sink = buf[idx];
               ^
  374. }
  375. 

#33
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/overrun_st.c:387: error: Buffer Overrun L1
  Offset: 5 Size: 5.
  385. 	p = buf;
  386. 	pp = &p;
  387. 	*(*pp + 5) = 1;/*Tool should detect this line as error*/ /*ERROR: buffer overrun */
        ^
  388.         sink = buf[idx];
  389. }

#34
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/overrun_st.c:388: error: Uninitialized Value
  The value read from buf[_] was never initialized.
  386. 	pp = &p;
  387. 	*(*pp + 5) = 1;/*Tool should detect this line as error*/ /*ERROR: buffer overrun */
  388.         sink = buf[idx];
               ^
  389. }
  390. 

#35
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/overrun_st.c:402: error: Buffer Overrun L1
  Offset: 5 Size: 5.
  400. 	p1 = buf;
  401. 	p2 = p1;
  402. 	p2[5] = 1;/*Tool should detect this line as error*/ /*ERROR: buffer overrun */
        ^
  403.         sink = buf[idx];
  404. }

#36
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/overrun_st.c:403: error: Uninitialized Value
  The value read from buf[_] was never initialized.
  401. 	p2 = p1;
  402. 	p2[5] = 1;/*Tool should detect this line as error*/ /*ERROR: buffer overrun */
  403.         sink = buf[idx];
               ^
  404. }
  405. 

#37
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/overrun_st.c:428: error: Buffer Overrun L1
  Offset: 5 Size: 5.
  426. 	int index = 5;
  427. 	p = buf;
  428. 	*(p + index) = 1;/*Tool should detect this line as error*/ /*ERROR: buffer overrun */
        ^
  429.         sink = buf[idx];
  430. }

#38
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/overrun_st.c:429: error: Uninitialized Value
  The value read from buf[_] was never initialized.
  427. 	p = buf;
  428. 	*(p + index) = 1;/*Tool should detect this line as error*/ /*ERROR: buffer overrun */
  429.         sink = buf[idx];
               ^
  430. }
  431. 

#39
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/overrun_st.c:444: error: Uninitialized Value
  The value read from buf[_] was never initialized.
  442. 	index = rand();
  443. 	*(p + index) = 1;/*Tool should detect this line as error*/ /*ERROR: buffer overrun */
  444.         sink = buf[idx];
               ^
  445. }
  446. 

#40
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/overrun_st.c:457: error: Buffer Overrun L1
  Offset: 5 Size: 5.
  455. 	int index = 2;
  456. 	p = buf;
  457. 	*(p + ((2 * index) + 1)) = 1;/*Tool should detect this line as error*/ /*ERROR: buffer overrun */
        ^
  458.         sink = buf[idx];
  459. }

#41
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/overrun_st.c:458: error: Uninitialized Value
  The value read from buf[_] was never initialized.
  456. 	p = buf;
  457. 	*(p + ((2 * index) + 1)) = 1;/*Tool should detect this line as error*/ /*ERROR: buffer overrun */
  458.         sink = buf[idx];
               ^
  459. }
  460. 

#42
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/overrun_st.c:471: error: Buffer Overrun L1
  Offset: 5 Size: 5.
  469. 	int index = 2;
  470. 	p = buf;
  471. 	*(p + ((index * index) + 1)) = 1;/*Tool should detect this line as error*/ /*ERROR: buffer overrun */
        ^
  472.         sink = buf[idx];
  473. }

#43
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/overrun_st.c:472: error: Uninitialized Value
  The value read from buf[_] was never initialized.
  470. 	p = buf;
  471. 	*(p + ((index * index) + 1)) = 1;/*Tool should detect this line as error*/ /*ERROR: buffer overrun */
  472.         sink = buf[idx];
               ^
  473. }
  474. 

#44
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/overrun_st.c:489: error: Buffer Overrun L1
  Offset: 5 Size: 5.
  487. 	int *p;
  488. 	p = buf;
  489. 	*(p + overrun_st_036_func_001()) = 1;/*Tool should detect this line as error*/ /*ERROR: buffer overrun */
        ^
  490.         sink = buf[idx];
  491. }

#45
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/overrun_st.c:490: error: Uninitialized Value
  The value read from buf[_] was never initialized.
  488. 	p = buf;
  489. 	*(p + overrun_st_036_func_001()) = 1;/*Tool should detect this line as error*/ /*ERROR: buffer overrun */
  490.         sink = buf[idx];
               ^
  491. }
  492. 

#46
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/overrun_st.c:503: error: Uninitialized Value
  The value read from buf[_] was never initialized.
  501. 	p = buf;
  502. 	*(p + index) = 1;/*Tool should detect this line as error*/ /*ERROR: buffer overrun */
  503.         sink = buf[idx];
               ^
  504. }
  505. 

#47
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/overrun_st.c:508: error: Buffer Overrun L1
  Offset: 5 Size: 5 by call to `overrun_st_037_func_001`.
  506. void overrun_st_037 ()
  507. {
  508. 	overrun_st_037_func_001(5);
        ^
  509. }
  510. 

#48
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/overrun_st.c:522: error: Buffer Overrun L2
  Offset: [3, 6] Size: 5.
  520. 	int index = 2;
  521. 	p = buf;
  522. 	*(p + indexes[index]) = 1;/*Tool should detect this line as error*/ /*ERROR: buffer overrun */
        ^
  523.         sink = buf[idx];
  524. }

#49
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/overrun_st.c:523: error: Uninitialized Value
  The value read from buf[_] was never initialized.
  521. 	p = buf;
  522. 	*(p + indexes[index]) = 1;/*Tool should detect this line as error*/ /*ERROR: buffer overrun */
  523.         sink = buf[idx];
               ^
  524. }
  525. 

#50
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/overrun_st.c:538: error: Buffer Overrun L1
  Offset: 5 Size: 5.
  536. 	index1 = index;
  537. 	p = buf;
  538. 	*(p + index1) = 1;/*Tool should detect this line as error*/ /*ERROR: buffer overrun */
        ^
  539.         sink = buf[idx];
  540. }

#51
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/overrun_st.c:539: error: Uninitialized Value
  The value read from buf[_] was never initialized.
  537. 	p = buf;
  538. 	*(p + index1) = 1;/*Tool should detect this line as error*/ /*ERROR: buffer overrun */
  539.         sink = buf[idx];
               ^
  540. }
  541. 

#52
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/overrun_st.c:556: error: Buffer Overrun L1
  Offset: 5 Size: 5.
  554. 	index2 = index1;
  555. 	p = buf;
  556. 	*(p + index2) = 1;/*Tool should detect this line as error*/ /*ERROR: buffer overrun */
        ^
  557.         sink = buf[idx];
  558. }

#53
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/overrun_st.c:557: error: Uninitialized Value
  The value read from buf[_] was never initialized.
  555. 	p = buf;
  556. 	*(p + index2) = 1;/*Tool should detect this line as error*/ /*ERROR: buffer overrun */
  557.         sink = buf[idx];
               ^
  558. }
  559. 

#54
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/overrun_st.c:570: error: Buffer Overrun L2
  Offset: [0, 5] Size: 5.
  568. 	for (i = 0; i <= 5; i ++)
  569. 	{
  570. 		buf[i] = 1;/*Tool should detect this line as error*/ /*ERROR: buffer overrun */
         ^
  571. 	}
  572.         sink = buf[idx];

#55
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/overrun_st.c:572: error: Uninitialized Value
  The value read from buf[_] was never initialized.
  570. 		buf[i] = 1;/*Tool should detect this line as error*/ /*ERROR: buffer overrun */
  571. 	}
  572.         sink = buf[idx];
               ^
  573. }
  574. 

#56
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/overrun_st.c:588: error: Buffer Overrun L2
  Offset: [0, 5] Size: 5.
  586. 		for (j = 0; j < 6; j ++)
  587. 		{
  588. 			buf[i][j] = 1;/*Tool should detect this line as error*/ /*ERROR: buffer overrun */
          ^
  589. 		}
  590. 	}

#57
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/overrun_st.c:613: error: Buffer Overrun L2
  Offset: [0, 5] Size: 5.
  611. 		for (j = 0; j < 6; j ++)
  612. 		{
  613. 			pbuf[i][j] = 1;/*Tool should detect this line as error*/ /*ERROR: buffer overrun */
          ^
  614. 		}
  615. 	}

#58
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/overrun_st.c:633: error: Uninitialized Value
  The value read from buf[_] was never initialized.
  631. 		p ++;/*Tool should detect this line as error*/ /*ERROR: buffer overrun */
  632. 	}
  633.         sink = buf[idx];
               ^
  634. }
  635. 

#59
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/overrun_st.c:648: error: Buffer Overrun L1
  Offset: 5 Size: 5 by call to `overrun_st_045_func_001`.
  646. {
  647. 	int buf[5];
  648. 	overrun_st_045_func_001(buf);
        ^
  649.         sink = buf[idx];
  650. }

#60
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/overrun_st.c:664: error: Buffer Overrun L1
  Offset: 5 Size: 5 by call to `overrun_st_046_func_001`.
  662. {
  663. 	int buf[5];
  664. 	overrun_st_046_func_001(buf);
        ^
  665.         sink = buf[idx];
  666. }

#61
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/overrun_st.c:680: error: Buffer Overrun L1
  Offset: 5 Size: 5 by call to `overrun_st_047_func_001`.
  678. {
  679. 	int buf[5];
  680. 	overrun_st_047_func_001(buf);
        ^
  681. }
  682. 

#62
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/overrun_st.c:695: error: Buffer Overrun L1
  Offset: 5 Size: 5 by call to `overrun_st_048_func_001`.
  693. {
  694. 	int buf[5];
  695. 	overrun_st_048_func_001(buf);
        ^
  696.         sink = buf[idx];
  697. }

#63
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/overrun_st.c:706: error: Buffer Overrun L1
  Offset: 5 Size: 5.
  704. {
  705. 	int buf[] = {1, 2, 3, 4, 5};
  706. 	buf[5] = 1;/*Tool should detect this line as error*/ /*ERROR: buffer overrun */
        ^
  707.         sink = buf[idx];
  708. }

#64
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/overrun_st.c:724: error: Buffer Overrun L1
  Offset: 5 Size: 5.
  722. 			{1, 2, 3, 4, 5, 6}
  723. 		};
  724. 	buf[5][5] = 1;/*Tool should detect this line as error*/ /*ERROR: buffer overrun */
        ^
  725. }
  726. 

#65
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/overrun_st.c:739: error: Buffer Overrun L1
  Offset: 5 Size: 5.
  737. 	int buf5[] = {1, 2, 3, 4, 5};
  738. 	int *pbuf[] = {buf1, buf2, buf3, buf4, buf5};
  739. 	pbuf[4][5] = 1;/*Tool should detect this line as error*/ /*ERROR: buffer overrun */
        ^
  740. }
  741. 

#66
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/overrun_st.c:749: error: Buffer Overrun L1
  Offset: 5 Size: 5.
  747. {
  748. 	char buf[] = "1234";
  749. 	buf[5] = 1;/*Tool should detect this line as error*/ /*ERROR: buffer overrun */
        ^
  750. }
  751. 

#67
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/overrun_st.c:761: error: Buffer Overrun L1
  Offset: 2 Size: 2.
  759. 	int *p;
  760. 	p = (int*)buf;
  761. 	*(p + 2) = 1;/*Tool should detect this line as error*/ /*ERROR: buffer overrun */
        ^
  762. }
  763. 

Found 68 issues
                Issue Type(ISSUED_TYPE_ID): #
      Buffer Overrun L1(BUFFER_OVERRUN_L1): 42
  Uninitialized Value(UNINITIALIZED_VALUE): 19
      Buffer Overrun L2(BUFFER_OVERRUN_L2): 5
                    Dead Store(DEAD_STORE): 2
